# brrp

./: .gitignore  Dockerfile  Dockerfile_old  README.md  env_cpu.yml  environment.yml  pyproject.toml  requirements.txt
brrp/: clip.py  full_method.py  hinge_points.py  negative_sampling.py  registration.py  segmenter.py  subsample.py  svgd.py  utils.py  visualization.py
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: MeshList.msg
scripts/: example.py  exp1.sh  exp2.sh  generate_gif.py  qualitative.py  run_ros.py  run_ros_pointsdf.py  run_sim_experiment.py  train_pointsdf.py  uncertainty.py
website/: index.html  styles.css
