[project]
name = "brrp"
version = "0.0.1"
description = "Bayesian Reconstruction with Retrieval-augmented Priors"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Herbie Wright", email = "herb.e.wright@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]


[tool.setuptools]
packages=["brrp"]
